--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "clarity-icons": "^0.7.4",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
+    "handsontable": "^0.29.1",
+    "ng-lightning": "^1.1.0",
+    "ng2-handsontable": "https://github.com/renehamburger/ng2-handsontable/tarball/master",
     "rxjs": "5.0.0-beta.12",
     "ts-helpers": "^1.1.1",
     "zone.js": "^0.6.23"
