--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "3.2.1",
     "clarity-icons": "^0.7.4",
     "core-js": "^2.4.1",
+    "datalib": "^1.7.3",
     "hammerjs": "^2.0.8",
     "handsontable": "^0.29.1",
     "ng-lightning": "^1.1.0",
