--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
     "hammerjs": "^2.0.8",
     "handsontable": "^0.29.1",
     "ng-lightning": "^1.1.0",
-    "ng2-handsontable": "https://github.com/renehamburger/ng2-handsontable/tarball/master",
     "rxjs": "5.0.0-beta.12",
     "ts-helpers": "^1.1.1",
     "zone.js": "^0.6.23"
@@ -34,6 +33,7 @@
   "devDependencies": {
     "@angular/compiler-cli": "2.2.1",
     "@types/hammerjs": "^2.0.33",
+    "@types/handsontable": "^0.24.20",
     "@types/jasmine": "2.5.38",
     "@types/node": "^6.0.42",
     "angular-cli": "1.0.0-beta.21",
