--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     "@angular/platform-browser": "2.2.1",
     "@angular/platform-browser-dynamic": "2.2.1",
     "@angular/router": "3.2.1",
+    "chart.js": "^2.4.0",
     "clarity-icons": "^0.7.4",
     "core-js": "^2.4.1",
     "datalib": "^1.7.3",
     "hammerjs": "^2.0.8",
     "handsontable": "^0.29.1",
     "ng-lightning": "^1.1.0",
+    "ng2-charts": "^1.4.4",
     "rxjs": "5.0.0-beta.12",
     "ts-helpers": "^1.1.1",
     "zone.js": "^0.6.23"
