--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "handsontable": "^0.29.1",
     "ng-lightning": "^1.1.0",
     "ng2-charts": "^1.4.4",
+    "primeng": "^2.0.0-rc.1",
     "rxjs": "5.0.0-beta.12",
     "ts-helpers": "^1.1.1",
     "zone.js": "^0.6.23"
