Added flex layout and Plotly box plot for outliers

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@angular/common": "2.2.1",
     "@angular/compiler": "2.2.1",
     "@angular/core": "2.2.1",
+    "@angular/flex-layout": "^2.0.0-beta.4",
     "@angular/forms": "2.2.1",
     "@angular/http": "2.2.1",
     "@angular/material": "^2.0.0-alpha.11-3",
