--- a/package.json
+++ b/package.json
@@ -20,10 +20,11 @@
     "@angular/platform-browser": "^2.3.1",
     "@angular/platform-browser-dynamic": "^2.3.1",
     "@angular/router": "^3.3.1",
+    "@webcomponents/custom-elements": "^1.0.0-alpha.3",
     "chart.js": "^2.4.0",
-    "clarity-angular": "^0.8.4",
-    "clarity-icons": "^0.7.4",
-    "clarity-ui": "^0.8.4",
+    "clarity-angular": "^0.8.6",
+    "clarity-icons": "^0.8.6",
+    "clarity-ui": "^0.8.6",
     "core-js": "^2.4.1",
     "datalib": "^1.7.3",
     "hammerjs": "^2.0.8",
