--- a/package.json
+++ b/package.json
@@ -15,30 +15,34 @@
     "@angular/common": "^2.3.1",
     "@angular/compiler": "^2.3.1",
     "@angular/core": "^2.3.1",
+    "@angular/flex-layout": "^2.0.0-rc.1",
     "@angular/forms": "^2.3.1",
     "@angular/http": "^2.3.1",
+    "@angular/material": "^2.0.0-beta.2",
     "@angular/platform-browser": "^2.3.1",
     "@angular/platform-browser-dynamic": "^2.3.1",
     "@angular/router": "^3.3.1",
+    "@swimlane/ngx-charts": "git+https://github.com/bmzernichow/ngx-charts.git",
     "@webcomponents/custom-elements": "^1.0.0-alpha.3",
     "chart.js": "^2.4.0",
     "clarity-angular": "^0.8.6",
     "clarity-icons": "^0.8.6",
     "clarity-ui": "^0.8.6",
     "core-js": "^2.4.1",
+    "d3": "^4.4.0",
     "datalib": "^1.7.3",
     "hammerjs": "^2.0.8",
-    "handsontable": "^0.29.1",
+    "handsontable": "^0.31.1",
     "mutationobserver-shim": "^0.3.2",
     "ng-lightning": "^1.1.0",
     "ng2-charts": "^1.4.4",
     "primeng": "^2.0.0-rc.1",
-    "rxjs": "^5.0.1",
+    "rxjs": "^5.0.3",
     "ts-helpers": "^1.1.1",
     "zone.js": "^0.7.2"
   },
   "devDependencies": {
-    "@angular/cli": "1.0.0-beta.30",
+    "@angular/cli": "^1.0.0-rc.1",
     "@angular/compiler-cli": "^2.3.1",
     "@types/jasmine": "2.5.38",
     "@types/node": "^6.0.42",
