--- a/package.json
+++ b/package.json
@@ -29,7 +29,15 @@
     "clarity-icons": "^0.8.6",
     "clarity-ui": "^0.8.6",
     "core-js": "^2.4.1",
-    "d3": "^4.4.0",
+    "d3-array": "^1.1.1",
+    "d3-brush": "^1.0.4",
+    "d3-color": "^1.0.3",
+    "d3-force": "^1.0.6",
+    "d3-hierarchy": "^1.1.4",
+    "d3-interpolate": "^1.1.4",
+    "d3-scale": "^1.0.5",
+    "d3-selection": "^1.0.5",
+    "d3-shape": "^1.0.6",
     "datalib": "^1.7.3",
     "hammerjs": "^2.0.8",
     "handsontable": "^0.31.1",
