--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "d3-selection": "^1.0.5",
     "d3-shape": "^1.0.6",
     "datalib": "^1.7.3",
+    "flexboxgrid": "^6.3.1",
     "hammerjs": "^2.0.8",
     "handsontable": "^0.31.1",
     "mutationobserver-shim": "^0.3.2",
