--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "mutationobserver-shim": "^0.3.2",
     "ng-lightning": "^1.1.0",
     "ng2-charts": "^1.4.4",
+    "papaparse": "^4.3.3",
     "primeng": "^2.0.0-rc.1",
     "rxjs": "^5.0.3",
     "ts-helpers": "^1.1.1",
