--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "mutationobserver-shim": "^0.3.2",
     "ng-lightning": "^1.1.0",
     "ng2-charts": "^1.4.4",
+    "ng2-completer": "^1.6.0",
     "primeng": "^2.0.0-rc.1",
     "rxjs": "^5.0.3",
     "ts-helpers": "^1.1.1",
