--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "^2.3.1",
     "@angular/platform-browser-dynamic": "^2.3.1",
     "@angular/router": "^3.3.1",
+    "@ngui/auto-complete": "^0.14.3",
     "@swimlane/ngx-charts": "git+https://github.com/bmzernichow/ngx-charts.git",
     "@webcomponents/custom-elements": "^1.0.0-alpha.3",
     "chart.js": "^2.4.0",
